--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -34,7 +34,7 @@
 						</div>
 						<div class="col-lg-5">
 							<div class="hand-mockup text-lg-left text-center">
-								<img src="/img/trucvo.jpg" alt="Hand Mockup" />
+								<img src="/img/hand-mockup.png" alt="Hand Mockup" />
 							</div>
 						</div>
 					</div>
