--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -380,7 +380,7 @@ input::-webkit-input-placeholder {
     padding-top: 140px;
 	z-index: 1;
 	position: relative;
-    background-image: url(../img/hero-area.jpg);
+    background-image: url(/img/hero-area.jpg);
     background-repeat: no-repeat;
     background-position: center;
 	background-attachment: fixed;
@@ -461,7 +461,7 @@ input::-webkit-input-placeholder {
 .feature-area {
 	z-index: 1;
 	position: relative;
-    background-image: url(../img/feature-bg.jpg);
+    background-image: url(/img/feature-bg.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -545,7 +545,7 @@ input::-webkit-input-placeholder {
 ---------- VIDEO AREA CSS START --------
 ---------------------------------------*/
 .video-area {
-    background: url(../img/video-overview.jpg) no-repeat center / cover;
+    background: url(/img/video-overview.jpg) no-repeat center / cover;
     position: relative;
 	background-attachment: fixed;
     text-align: center;
@@ -657,7 +657,7 @@ input::-webkit-input-placeholder {
     display: inline-block;
 }
 .single-screenshot.slick-center {
-    background-image: url(../img/screenshot/mockup.png);
+    background-image: url(/img/screenshot/mockup.png);
     background-size: 100% 100%;
 }
 .single-screenshot.slick-center img {
@@ -818,7 +818,7 @@ input::-webkit-input-placeholder {
 -------- COUNTERUP AREA CSS START --------
 ---------------------------------------*/
 .counter-area {
-    background: url(../img/counter-bg.jpg) no-repeat center / cover;
+    background: url(/img/counter-bg.jpg) no-repeat center / cover;
 	background-attachment: fixed;
     position: relative;
     text-align: center;
@@ -938,7 +938,7 @@ input::-webkit-input-placeholder {
 -------- DOWNLOAD AREA CSS START --------
 ---------------------------------------*/
 .download-area {
-    background: url(../img/download-bg.jpg) no-repeat center / cover;
+    background: url(/img/download-bg.jpg) no-repeat center / cover;
     position: relative;
     text-align: center;
     z-index: 1;
@@ -1052,7 +1052,7 @@ h4.post-title a {
     height: 450px;
 }
 .footer {
-    background: url(../img/footer-bg.jpg) no-repeat center / cover;
+    background: url(/img/footer-bg.jpg) no-repeat center / cover;
     position: relative;
     z-index: 1;
     padding-bottom: 35px;
@@ -1321,7 +1321,7 @@ h4.post-title a {
   overflow: visible;
   width: 100%;
   height: 100%;
-  background: #fff url("../img/loader.gif") no-repeat center center;
+  background: #fff url("/img/loader.gif") no-repeat center center;
 }
 /*--------------------------------------
 --------- Pre Loader Style END ---------
