--- a/views/_layout/main.handlebars
+++ b/views/_layout/main.handlebars
@@ -221,7 +221,7 @@
 	<!-- YTPlayer JS -->
 	<script src="/assets/js/jquery.mb.YTPlayer.min.js"></script>
 	<!-- jQuery Easing JS -->
-	<script src="/assets/js/jquery.easing.1.3.js"></script>
+	{{!-- <script src="/assets/js/jquery.easing.1.3.js"></script> --}}
 	<!-- Gmap JS -->
 	<script src="/assets/js/gmap3.min.js"></script>
 	<!-- Google map api -->
