update add message

--- a/views/_layout/main.handlebars
+++ b/views/_layout/main.handlebars
@@ -92,27 +92,26 @@
 					<div class="contact-form">
 						<h4>Get in Touch</h4>
 						<p class="form-message"></p>
-						<form id="contact-form" action="#" method="POST">
-							<input type="text" name="name" placeholder="Enter Your Name">
+						<form id="contact-form" action="home/newMessage" method="POST" role="form">
+							<input type="text" name="uname" placeholder="Enter Your Name">
 							<input type="email" name="email" placeholder="Enter Your Email">
 							<input type="text" name="subject" placeholder="Your Subject">
-							<textarea placeholder="Messege" name="message"></textarea>
-							<button type="submit" name="submit">Send Message</button>
+							<textarea placeholder="Messege" name="content"></textarea>
+							<button type="submit" name="submit"><a href="/home/index"><span>Send Message</span></a></button>
 						</form>
 					</div>
 				</div>
 				<div class="col-lg-6">
 					<div class="contact-address">
 						<h4>Address</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-							aliqua. Ut enim ad minim veniam, quis nostrud</p>
+						<p>..., Cong Hoa, Ward 4, Tan Binh District, Ho Chi Minh City</p>
 						<ul>
 							<li>
 								<div class="contact-address-icon">
 									<i class="icofont icofont-headphone-alt"></i>
 								</div>
 								<div class="contact-address-info">
-									<a href="callto:#">01234567890</a>
+									<a href="callto:#">0968968xxx</a>
 								</div>
 							</li>
 							<li>
