--- a/views/_layout/mainBlog.handlebars
+++ b/views/_layout/mainBlog.handlebars
@@ -39,6 +39,51 @@
 <body data-spy="scroll" data-target=".header" data-offset="50">
 	<!-- Page loader -->
 	<div id="preloader"></div>
+	<!-- header section start -->
+	<header class="header">
+		<div class="container">
+			<div class="row flexbox-center">
+				<!-- <div class="col-lg-2 col-md-3 col-6">
+                    <div class="logo">
+                        <a href="#home"><img src="assets/img/logo.png" alt="logo" /></a>
+                    </div>
+                </div> -->
+				<div class="col-lg-10 col-md-9 col-6">
+					<div class="responsive-menu"></div>
+					<div class="mainmenu">
+						<ul id="primary-menu">
+							<li>
+								<a class="nav-link active" href="home">Home</a>
+							</li>
+							<li>
+								<a class="nav-link" href="#blog">Blog</a>
+							</li>
+							<li>
+								<a class="nav-link" href="#contact">Contact</a>
+							</li>
+							<li><a class="appao-btn" href="#">Logout</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<!-- header section end -->
+    <!-- breadcrumb area start -->
+    <section class="hero-area breadcrumb-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="hero-area-content">
+                        <h1>Blog Post</h1>
+                        <ul>
+                            <li><a class="appao-btn" href="blog/blog-add">New Blog</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!-- breadcrumb area end -->
 	
     {{{body}}}
 	<!-- footer section start -->
