--- a/views/blog/blog-detail.hbs
+++ b/views/blog/blog-detail.hbs
@@ -6,7 +6,7 @@
 					<div class="col-lg-8">
 					    <div class="blog-details">
 							{{#each blog}}
-							<img src="assets/img/details.jpg" alt="blog-details">
+							<img src="/img/blog/{{blogImage}}" alt="blog-details">
 							<div class="post-author">
 								<a href="#"><i class="icofont icofont-user"></i>{{username}}</a>
 								<a href="#"><i class="icofont icofont-speech-comments"></i>{{blogComment}}</a>
