--- a/views/blog/blog-index.hbs
+++ b/views/blog/blog-index.hbs
@@ -7,7 +7,7 @@
 					<div class="col-lg-4 col-md-6">
 					    <div class="single-post">
 							<div class="post-thumbnail">
-								<a href="blog/blog-detail/{{blogID}}"><img src="assets/img/blog/blog1.jpg" alt="blog"></a>
+								<a href="blog/blog-detail/{{blogID}}"><img src="/img/blog/{{blogImage}}" alt="blog"></a>
 							</div>
 							<div class="post-details">
 								<div class="post-author">
