--- a/views/_layout/mainAccount.handlebars
+++ b/views/_layout/mainAccount.handlebars
@@ -56,12 +56,8 @@
 								<a class="nav-link active" href="home">Home</a>
 							</li>
 							<li>
-								<a class="nav-link" href="#blog">Blog</a>
-							</li>
-							<li>
 								<a class="nav-link" href="#contact">Contact</a>
 							</li>
-							<li><a class="appao-btn" href="/">Logout</a></li>
 						</ul>
 					</div>
 				</div>
@@ -75,11 +71,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="hero-area-content">
-                        {{!-- {{#each account}}
-                        <h1>Welcom {{username}} to Blog Post</h1>
-                        {{/each}} --}}
+                        <h1>Login</h1>
                         <ul>
-                            <li><a class="appao-btn" href="blog/blog-add">New Blog</a></li>
+                            <li><a class="appao-btn" href="#">Sign up</a></li>
                         </ul>
                     </div>
                 </div>
@@ -91,6 +85,7 @@
 	<!-- footer section start -->
 	<footer class="footer" id="contact">
 		<div class="container">
+
 			<div class="row">
 				<div class="col-lg-6">
 					<div class="contact-form">
