--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -32,7 +32,7 @@
 							<li>
 								<a class="nav-link" href="#contact">Contact</a>
 							</li>
-							<li><a class="appao-btn" href="#">Login</a></li>
+							<li><a class="appao-btn" href="account/login">Login</a></li>
 						</ul>
 					</div>
 				</div>
