update render link

--- a/views/_layout/mainBlog.handlebars
+++ b/views/_layout/mainBlog.handlebars
@@ -61,7 +61,7 @@
 							<li>
 								<a class="nav-link" href="#contact">Contact</a>
 							</li>
-							<li><a class="appao-btn" href="/">Logout</a></li>
+							<li><a class="appao-btn" href="/logout">Logout</a></li>
 						</ul>
 					</div>
 				</div>
