--- a/views/account/login.hbs
+++ b/views/account/login.hbs
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <div class="single-post">
-                    <form action="" method="POST" role="form">
+                    <form action="login" method="POST" role="form">
                         <div class="post-details">
                             <label>Username</label>
                             <input type="text" placeholder="Enter username" required="true" name="username">
