--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,45 +1,4 @@
-	<!-- header section start -->
-	<header class="header">
-		<div class="container">
-			<div class="row flexbox-center">
-				<!-- <div class="col-lg-2 col-md-3 col-6">
-                    <div class="logo">
-                        <a href="#home"><img src="assets/img/logo.png" alt="logo" /></a>
-                    </div>
-                </div> -->
-				<div class="col-lg-10 col-md-9 col-6">
-					<div class="responsive-menu"></div>
-					<div class="mainmenu">
-						<ul id="primary-menu">
-							<li>
-								<a class="nav-link active" href="#home">Home</a>
-							</li>
-							<li>
-								<a class="nav-link" href="#about">About</a>
-							</li>
-							<li>
-								<a class="nav-link" href="#skills">Skills</a>
-							</li>
-							<li>
-								<a class="nav-link" href="#product">Product</a>
-							</li>
-							<li>
-								<a class="nav-link" href="#overview">Overview</a>
-							</li>
-							<li>
-								<a class="nav-link" href="#blog">Blog</a>
-							</li>
-							<li>
-								<a class="nav-link" href="#contact">Contact</a>
-							</li>
-							<li><a class="appao-btn" href="account/login">Login</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<!-- header section end -->
+	
 	<!-- hero area start -->
 	<section class="hero-area" id="home">
 		<div class="hero-area-slider">
@@ -368,14 +327,14 @@
 				</div>
 				<div class="col-lg-6">
 					<div class="single-showcase-box">
-						<img src="/img/showcase.png" alt="showcase">
+						<img src="/img/showcase1.jpg" alt="showcase">
 					</div>
 				</div>
 			</div>
 			<div class="row flexbox-center">
 				<div class="col-lg-6">
 					<div class="single-showcase-box">
-						<img src="/img/showcase2.png" alt="showcase">
+						<img src="/img/showcase2.jpg" alt="showcase">
 					</div>
 				</div>
 				<div class="col-lg-6">
