--- a/views/_layout/mainAccount.handlebars
+++ b/views/_layout/mainAccount.handlebars
@@ -53,7 +53,7 @@
 					<div class="mainmenu">
 						<ul id="primary-menu">
 							<li>
-								<a class="nav-link active" href="home">Home</a>
+								<a class="nav-link" href="/">Home</a>
 							</li>
 							<li>
 								<a class="nav-link" href="#contact">Contact</a>
@@ -187,13 +187,16 @@
 					<i class="icofont icofont-wheel"></i>
 				</a>
 				<div class="switched-options">
+					<div class="config-title">Home Pages</div>
+						<ul>
+							<li>
+								<a href="home/index">Home</a>
+							</li>
+						</ul>
 					<div class="config-title">Blog Pages</div>
 					<ul>
 						<li>
-							<a href="blog.html">Blog</a>
-						</li>
-						<li>
-							<a href="blog-detail.html">Blog Details</a>
+							<a href="blog/blog-index">Blog</a>
 						</li>
 					</ul>
 				</div>
