--- a/views/_layout/mainBlog.handlebars
+++ b/views/_layout/mainBlog.handlebars
@@ -53,7 +53,7 @@
 					<div class="mainmenu">
 						<ul id="primary-menu">
 							<li>
-								<a class="nav-link active" href="home">Home</a>
+								<a class="nav-link" href="/">Home</a>
 							</li>
 							<li>
 								<a class="nav-link" href="#blog">Blog</a>
@@ -66,6 +66,7 @@
 								<li><a id="lnkLogout" href="javascript:;">Logout</a></li>
 							{{else}}
 								<li><a class="appao-btn" href="account/login">Login</a></li>
+								<li><a class="appao-btn" href="account/login">Sign up</a></li>
 							{{/if}}
 						</ul>
 					</div>
@@ -197,13 +198,16 @@
 					<i class="icofont icofont-wheel"></i>
 				</a>
 				<div class="switched-options">
+					<div class="config-title">Home Pages</div>
+						<ul>
+							<li>
+								<a href="home/index">Home</a>
+							</li>
+						</ul>
 					<div class="config-title">Blog Pages</div>
 					<ul>
 						<li>
 							<a href="blog/blog-index">Blog</a>
-						</li>
-						<li>
-							<a href="blog/blog-detail">Blog Details</a>
 						</li>
 					</ul>
 				</div>
