--- a/views/_layout/main.handlebars
+++ b/views/_layout/main.handlebars
@@ -73,7 +73,7 @@
 							<li>
 								<a class="nav-link" href="#contact">Contact</a>
 							</li>
-								<a class="appao-btn" href="account/login">Login</a>
+							<a class="appao-btn" href="account/login">Login</a>
 							</li>
 						</ul>
 					</div>
@@ -82,8 +82,8 @@
 		</div>
 	</header>
 	<!-- header section end -->
-	
-    {{{body}}}
+
+	{{{body}}}
 	<!-- footer section start -->
 	<footer class="footer" id="contact">
 		<div class="container">
@@ -98,7 +98,11 @@
 							<input type="email" name="email" placeholder="Enter Your Email">
 							<input type="text" name="subject" placeholder="Your Subject">
 							<textarea placeholder="Messege" name="content"></textarea>
-							<button type="submit" name="submit"><a href="/index"><span>Send Message</span></a></button>
+							<button type="submit" name="submit">
+								<a href="/index">
+									<span>Send Message</span>
+								</a>
+							</button>
 						</form>
 					</div>
 				</div>
@@ -190,11 +194,11 @@
 				</a>
 				<div class="switched-options">
 					<div class="config-title">Home Pages</div>
-						<ul>
-							<li>
-								<a href="home/index">Home</a>
-							</li>
-						</ul>
+					<ul>
+						<li>
+							<a href="home/index">Home</a>
+						</li>
+					</ul>
 					<div class="config-title">Blog Pages</div>
 					<ul>
 						<li>
@@ -224,7 +228,8 @@
 	<!-- YTPlayer JS -->
 	<script src="/assets/js/jquery.mb.YTPlayer.min.js"></script>
 	<!-- jQuery Easing JS -->
-	{{!-- <script src="/assets/js/jquery.easing.1.3.js"></script> --}}
+	{{!--
+	<script src="/assets/js/jquery.easing.1.3.js"></script> --}}
 	<!-- Gmap JS -->
 	<script src="/assets/js/gmap3.min.js"></script>
 	<!-- Google map api -->
@@ -238,7 +243,7 @@
 	<!-- main JS -->
 	<script src="/assets/js/main.js"></script>
 	<script type="text/javascript">
-		$('#lnkLogout').on('click', function() {
+		$('#lnkLogout').on('click', function () {
 			$('#frmLogout').submit();
 		});
 	</script>
