--- a/views/_layout/mainAccount.handlebars
+++ b/views/_layout/mainAccount.handlebars
@@ -65,23 +65,26 @@
 		</div>
 	</header>
 	<!-- header section end -->
-    <!-- breadcrumb area start -->
-    <section class="hero-area breadcrumb-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="hero-area-content">
-                        <h1>Login</h1>
-                        <ul>
-                            <li><a class="appao-btn" href="#">Sign up</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><!-- breadcrumb area end -->
-	
-    {{{body}}}
+	<!-- breadcrumb area start -->
+	<section class="hero-area breadcrumb-area">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="hero-area-content">
+						<h1>Login</h1>
+						<ul>
+							<li>
+								<a class="appao-btn" href="#">Sign up</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- breadcrumb area end -->
+
+	{{{body}}}
 	<!-- footer section start -->
 	<footer class="footer" id="contact">
 		<div class="container">
@@ -96,7 +99,11 @@
 							<input type="email" name="email" placeholder="Enter Your Email">
 							<input type="text" name="subject" placeholder="Your Subject">
 							<textarea placeholder="Messege" name="content"></textarea>
-							<button type="submit" name="submit"><a href="/index"><span>Send Message</span></a></button>
+							<button type="submit" name="submit">
+								<a href="/index">
+									<span>Send Message</span>
+								</a>
+							</button>
 						</form>
 					</div>
 				</div>
@@ -188,11 +195,11 @@
 				</a>
 				<div class="switched-options">
 					<div class="config-title">Home Pages</div>
-						<ul>
-							<li>
-								<a href="home/index">Home</a>
-							</li>
-						</ul>
+					<ul>
+						<li>
+							<a href="home/index">Home</a>
+						</li>
+					</ul>
 					<div class="config-title">Blog Pages</div>
 					<ul>
 						<li>
@@ -222,7 +229,8 @@
 	<!-- YTPlayer JS -->
 	<script src="/assets/js/jquery.mb.YTPlayer.min.js"></script>
 	<!-- jQuery Easing JS -->
-	{{!-- <script src="/assets/js/jquery.easing.1.3.js"></script> --}}
+	{{!--
+	<script src="/assets/js/jquery.easing.1.3.js"></script> --}}
 	<!-- Gmap JS -->
 	<script src="/assets/js/gmap3.min.js"></script>
 	<!-- Google map api -->
