--- a/views/_layout/mainBlog.handlebars
+++ b/views/_layout/mainBlog.handlebars
@@ -62,11 +62,18 @@
 								<a class="nav-link" href="#contact">Contact</a>
 							</li>
 							{{#if layoutVM.isLogged}}
-								<form id="frmLogout" method="post" action="/account/logout"></form>
-								<li><a id="lnkLogout" href="javascript:;">Logout</a></li>
+							<li>
+								<form id="frmLogout" method="post" action="/account/logout">
+									<a class="appao-btn" id="lnkLogout" href="javascript:;">Logout</a>
+								</form>
+							</li>
 							{{else}}
-								<li><a class="appao-btn" href="account/login">Login</a></li>
-								<li><a class="appao-btn" href="account/login">Sign up</a></li>
+							<li>
+								<a class="appao-btn" href="account/login">Login</a>
+							</li>
+							<li>
+								<a class="appao-btn" href="account/login">Sign up</a>
+							</li>
 							{{/if}}
 						</ul>
 					</div>
@@ -75,25 +82,74 @@
 		</div>
 	</header>
 	<!-- header section end -->
-    <!-- breadcrumb area start -->
-    <section class="hero-area breadcrumb-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="hero-area-content">
-                        {{!-- {{#each account}}
-                        <h1>Welcom {{username}} to Blog Post</h1>
-                        {{/each}} --}}
-                        <ul>
-                            <li><a class="appao-btn" href="blog/blog-add">New Blog</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><!-- breadcrumb area end -->
-	
-    {{{body}}}
+	<!-- breadcrumb area start -->
+	<section class="hero-area breadcrumb-area">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="hero-area-content">
+						{{!-- {{#each account}}
+						<h1>Welcom {{username}} to Blog Post</h1>
+						{{/each}} --}}
+						<ul>
+							<li>
+								<a class="appao-btn" href="blog/add">New Blog</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- breadcrumb area end -->
+
+	<!-- blog section start -->
+	<section class="blog-area blog-page" id="blog">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8">
+					{{{body}}}
+				</div>
+				<div class="col-lg-4">
+					<div class="sidebar">
+						<div class="widget">
+							<form action="#">
+								<input type="text" name="search" placeholder="Search here">
+								<button type="submit">Go</button>
+							</form>
+						</div>
+						<div class="widget">
+							<h4>Categories</h4>
+							<ul>
+								{{#each category}}
+								<li>
+									<a href="#">{{categoryName}}</a>
+								</li>
+								{{/each}}
+							</ul>
+						</div>
+						<div class="widget">
+							<h4>Latest posts</h4>
+							<ul>
+								{{#each list}}
+								<li>
+									<a href="#">{{blogTitle}}</a>
+								</li>
+								{{/each}}
+							</ul>
+						</div>
+						<div class="widget widget-tags">
+							<h4>Tags</h4>
+							{{#each blog}}
+							<a href="#">{{categoryName}}</a>
+							{{/each}}
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- blog section end -->
 	<!-- footer section start -->
 	<footer class="footer" id="contact">
 		<div class="container">
@@ -107,7 +163,11 @@
 							<input type="email" name="email" placeholder="Enter Your Email">
 							<input type="text" name="subject" placeholder="Your Subject">
 							<textarea placeholder="Messege" name="content"></textarea>
-							<button type="submit" name="submit"><a href="/index"><span>Send Message</span></a></button>
+							<button type="submit" name="submit">
+								<a href="/index">
+									<span>Send Message</span>
+								</a>
+							</button>
 						</form>
 					</div>
 				</div>
@@ -199,11 +259,11 @@
 				</a>
 				<div class="switched-options">
 					<div class="config-title">Home Pages</div>
-						<ul>
-							<li>
-								<a href="home/index">Home</a>
-							</li>
-						</ul>
+					<ul>
+						<li>
+							<a href="home/index">Home</a>
+						</li>
+					</ul>
 					<div class="config-title">Blog Pages</div>
 					<ul>
 						<li>
@@ -233,7 +293,8 @@
 	<!-- YTPlayer JS -->
 	<script src="/assets/js/jquery.mb.YTPlayer.min.js"></script>
 	<!-- jQuery Easing JS -->
-	{{!-- <script src="/assets/js/jquery.easing.1.3.js"></script> --}}
+	{{!--
+	<script src="/assets/js/jquery.easing.1.3.js"></script> --}}
 	<!-- Gmap JS -->
 	<script src="/assets/js/gmap3.min.js"></script>
 	<!-- Google map api -->
@@ -246,8 +307,8 @@
 	<script src="/assets/js/switcher.js"></script>
 	<!-- main JS -->
 	<script src="/assets/js/main.js"></script>
-    <script type="text/javascript">
-		$('#lnkLogout').on('click', function() {
+	<script type="text/javascript">
+		$('#lnkLogout').on('click', function () {
 			$('#frmLogout').submit();
 		});
 	</script>
