--- a/views/blog/detail.hbs
+++ b/views/blog/detail.hbs
@@ -1,71 +1,39 @@
-
-		<!-- blog section start -->
-		<section class="blog-detail" id="blog">
-			<div class="container">
+<div class="row">
+	<div class="col-lg-12">
+		<div class="blog-details">
+			{{#each blog}}
+			<img src="/img/blog/{{blogImage}}" alt="blog-details">
+			<div class="post-author">
+				<a href="#">
+					<i class="icofont icofont-user"></i>{{username}}</a>
+				<a href="#">
+					<i class="icofont icofont-speech-comments"></i>{{blogComment}}</a>
+				<a href="#">
+					<i class="icofont icofont-calendar"></i>{{blogDate}}</a>
+			</div>
+			<h4 class="post-title">
+				<a href="#">{{blogTitle}}</a>
+			</h4>
+			<p>{{blogContent}}</p>
+			{{/each}}
+		</div>
+		<div class="blog-reply">
+			<h4>Leave a Reply</h4>
+			<form action="addComment" method="POST">
 				<div class="row">
-					<div class="col-lg-8">
-					    <div class="blog-details">
-							{{#each blog}}
-							<img src="/img/blog/{{blogImage}}" alt="blog-details">
-							<div class="post-author">
-								<a href="#"><i class="icofont icofont-user"></i>{{username}}</a>
-								<a href="#"><i class="icofont icofont-speech-comments"></i>{{blogComment}}</a>
-								<a href="#"><i class="icofont icofont-calendar"></i>{{blogDate}}</a>
-							</div>
-							<h4 class="post-title"><a href="#">{{blogTitle}}</a></h4>
-							<p>{{blogContent}}</p>
-							{{/each}}
-						</div>
-					    <div class="blog-reply">
-							<h4>Leave a Reply</h4>
-							<form action="addComment" method="POST">
-								<div class="row">
-									{{!-- <div class="col-lg-6">
-										<input type="text" name="replyname" placeholder="Enter Your Name">
-									</div>
-									<div class="col-lg-6">
-										<input type="email" name="replyemail" placeholder="Enter Your Email">
-									</div> --}}
-									<div class="col-lg-12">
-										<textarea placeholder="Messege" name="message"></textarea>
-										<button type="submit" name="replysubmit">Post Comment</button>
-									</div>
-								</div>
-				            </form>
-						</div>
+					{{!--
+					<div class="col-lg-6">
+						<input type="text" name="replyname" placeholder="Enter Your Name">
 					</div>
-					<div class="col-lg-4">
-					    <div class="sidebar">
-							<div class="widget">
-								<form action="#">
-									<input type="text" name="search" placeholder="Search here">
-									<button type="submit">Go</button>
-								</form>
-							</div>
-							<div class="widget">
-								<h4>Categories</h4>
-								<ul>
-									{{#each category}}
-									<li><a href="#">{{categoryName}}</a></li>
-									{{/each}}
-								</ul>
-							</div>
-							<div class="widget">
-								<h4>Latest posts</h4>
-								<ul>
-									{{#each list}}
-									<li><a href="#">{{blogTitle}}</a></li>
-									{{/each}}
-								</ul>
-							</div>
-							<div class="widget widget-tags">
-								<h4>Tags</h4>
-								{{#each blog}}
-								<a href="#">{{categoryName}}</a>
-								{{/each}}
-							</div>
-						</div>
+					<div class="col-lg-6">
+						<input type="email" name="replyemail" placeholder="Enter Your Email">
+					</div> --}}
+					<div class="col-lg-12">
+						<textarea placeholder="Messege" name="message"></textarea>
+						<button type="submit" name="replysubmit">Post Comment</button>
 					</div>
 				</div>
-			</div>
-		</section><!-- blog section end -->
+			</form>
+		</div>
+	</div>
+</div>
