--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -177,7 +177,7 @@
 							</div>
 							<div class="feature-box-info">
 								<h4>Mobile App</h4>
-								<p>Xamarin</p>
+								<p>.....................</p>
 							</div>
 						</li>
 						<li>
@@ -185,7 +185,7 @@
 								<i class="icofont icofont-sun-alt"></i>
 							</div>
 							<div class="feature-box-info">
-								<h4>...</h4>
+								<h4>Design</h4>
 								<p>.....................</p>
 							</div>
 						</li>
@@ -227,7 +227,7 @@
 							<span></span>
 						</span>
 					</h2>
-					<p>Description app</p>
+					<p>Ox is my product. It's the website which provides designed images</p>
 				</div>
 			</div>
 		</div>
@@ -261,37 +261,38 @@
 		<div class="row">
 			<div class="col-md-3 col-sm-6">
 				<div class="single-counter-box">
-					<i class="icofont icofont-heart-alt"></i>
+					<i class="icofont icofont-image"></i>
 					<h1>
-						<span class="counter">9798</span>
+						<span class="counter">100</span>
 					</h1>
-					<p>View number</p>
+					<p>Image Number</p>
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6">
 				<div class="single-counter-box">
-					<i class="icofont icofont-protect"></i>
+					<i class="icofont icofont-paper"></i>
 					<h1>
-						<span class="counter">9798</span>
+						<span class="counter">100</span>
 					</h1>
-					<p>Like number</p>
+					<p>Blog Number</p>
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6">
 				<div class="single-counter-box">
-					<i class="icofont icofont-download-alt"></i>
+					<i class="icofont icofont-eye"></i>
 					<h1>
-						<span class="counter">979</span>K</h1>
-					<p>Apps Download</p>
+						<span class="counter">100</span>
+					</h1>
+					<p>View Number</p>
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6">
 				<div class="single-counter-box">
-					<i class="icofont icofont-trophy"></i>
+					<i class="icofont icofont-like"></i>
 					<h1>
-						<span class="counter">250</span>
+						<span class="counter">100</span>
 					</h1>
-					<p>dgdsg</p>
+					<p>Like Number</p>
 				</div>
 			</div>
 		</div>
@@ -311,7 +312,7 @@
 							<span></span>
 						</span>
 					</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+					<p>Overview the Ox website</p>
 				</div>
 			</div>
 		</div>
@@ -357,7 +358,7 @@
 					<a href="https://www.youtube.com/watch?v=RZXnugbhw_4" class="popup-youtube">
 						<i class="icofont icofont-ui-play"></i>
 					</a>
-					<h1>Watch Video Demo</h1>
+					<h1>Watch Video Ox</h1>
 				</div>
 			</div>
 		</div>
@@ -376,7 +377,7 @@
 							<span></span>
 						</span>
 					</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
+					<p>This is a place to focus the hot topics</p>
 				</div>
 			</div>
 		</div>
