--- a/views/blog/detail.hbs
+++ b/views/blog/detail.hbs
@@ -15,19 +15,19 @@
 				<a href="#">{{blogTitle}}</a>
 			</h4>
 			<p>{{blogContent}}</p>
+			<input type="hidden" name="blogID" value="{{blogID}}">
+			{{/each}}
+		</div>
+		<div class="blog-comment row">
+			{{#each comments}}
+				<h4>{{accountID}}</h4>
+				<p>{{commentContent}}</p>
 			{{/each}}
 		</div>
 		<div class="blog-reply">
 			<h4>Leave a Reply</h4>
 			<form action="addComment" method="POST">
 				<div class="row">
-					{{!--
-					<div class="col-lg-6">
-						<input type="text" name="replyname" placeholder="Enter Your Name">
-					</div>
-					<div class="col-lg-6">
-						<input type="email" name="replyemail" placeholder="Enter Your Email">
-					</div> --}}
 					<div class="col-lg-12">
 						<textarea placeholder="Messege" name="message"></textarea>
 						<button type="submit" name="replysubmit">Post Comment</button>
